cmake_minimum_required(VERSION 3.15)
project(baselib-example LANGUAGES CXX)

find_package(Qt5 COMPONENTS Core REQUIRED)
find_package(baselib COMPONENTS logger REQUIRED)

add_executable(${PROJECT_NAME})
target_sources(${PROJECT_NAME} PRIVATE main.cpp)

target_link_libraries(${PROJECT_NAME} PRIVATE baselib::logger Qt5::Core)
